--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,7 @@ ul {
     background: #EEE8E3;
     border-radius: 6px;
 }
+
 /* slider end */
 
 
@@ -138,7 +139,82 @@ ul {
 
 
 /* community start */
+.community__container-span {
+    font-weight: 400;
+    font-size: 45px;
+    line-height: 55px;
+    text-align: center;
+    color: #692340;
+    margin: auto;
+    display: flex;
+    display: block;
+    width: 400px;
+    /* height: 50px; */
+    padding: 118px 0 119px 0;
+}
 
+.community__container-cards {
+    display: flex;
+    justify-content: space-between;
+    column-gap: 100px;
+}
+
+.community__container__card-image {
+    object-fit: cover;
+}
+
+.community__container__card-span {
+    color: #692340;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 55px;
+}
+
+.community__container__card-title {
+    font-weight: 700;
+    font-size: 27px;
+    line-height: 30px;
+    color: #692340;
+    width: 354px;
+}
+
+.community__container__card-text {
+    width: 385px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 29px;
+    color: #692340;
+    padding-top: 15px;
+    padding-bottom: 54px;
+}
+
+.community__container-buttons {
+    display: flex;
+    padding-bottom: 140px;
+    column-gap: 332px;
+    text-align: center;
+    justify-content: center;
+}
+
+.community__container__button-title {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 26px;
+    width: 217px;
+    color: #692340;
+}
+
+.community__container__button-btn {
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 20px;
+    /* width: 141px; */
+    color: #692340;
+    background: #FFFFFF;
+    margin: 30px ;
+    padding: 20px 40px;
+    border: 1px solid #692340;
+}
 
 
 
